--- a/public/index.html
+++ b/public/index.html
@@ -4,6 +4,10 @@
     <body>
         <h1>Chatt App</h1>
         <p>Welcome to Chat App</p>
+        <form action="" id="message-form">
+            <input type="text" id="messageText">
+            <button type="submit">Send</button>
+        </form>
         <script src="/socket.io/socket.io.js"></script>
         <script src="/js/chat.js"></script>
     </body>
