--- a/public/chat.html
+++ b/public/chat.html
@@ -15,7 +15,7 @@
 
                 <div class="compose">
                     <form action="" id="message-form">
-                        <input type="text">
+                        <input type="text" placeholder="Message" required autocomplete="off">
                         <button type="submit">Send</button>
                     </form>
                     <button id="send-location">Send location</button>
